--- a/style.css
+++ b/style.css
@@ -259,21 +259,36 @@ del {
     display: flex;
     flex-direction: column;
     align-items: center;
-	@media (max-width: 480px) {
+	border: #F15F22 2px solid;
+    padding: 2px 10px;
+	@media (max-width: 1024px) {
 		padding-top: 20px;
+		margin-top: 20px;
+		margin-left: 0;
 	  };
+	  @media (max-width: 769px) {
+		padding-top: 20px;
+		margin-top: 20px;
+		margin-left: 20px;
+	  };
+	  @media (max-width: 480px) {
+		padding-top: 20px;
+		margin-top: 20px;
+		margin-left: 0;
+	  };
+	
 }
 
 .price_discount p {
-	font-size: 20px;
+	font-size: 19px;
     font-weight: 600;
 	@media (max-width: 480px) {
-		text-align: center;;
+		text-align: center;
 	  };	
 }
 
 .price_discount a {
-	font-size: 20px;
+	font-size: 19px;
 	text-decoration: underline;
 	color: #f15f22 !important;
 	font-weight: 600;
